--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wdforge/iset-utils",
+    "name": "iset-framework/utils",
     "type": "iset-utils: framework support classes",
     "authors": [
         {
