--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "iset-framework/utils",
-    "type": "iset-utils: framework support classes",
+    "type": "library",
+    "description": "iset-utils: framework support classes",
     "authors": [
         {
             "name": "Dolgiy Yuriy",
